display mode fix on mobile version

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -40,4 +40,7 @@ svg {
     justify-content: center;
     align-items: center;
   }
+  .displayMode {
+    top: 130px;
+  }
 }
